WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276587
[GStreamer][WebRTC] webrtc/video-av1.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=276587
Summary
[GStreamer][WebRTC] webrtc/video-av1.html is flaky
Philippe Normand
Reported
2024-07-14 03:55:13 PDT
Pass Timeout on GTK bots and Timeout on WPE bots.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-07-14 03:58:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30797
EWS
Comment 2
2024-07-14 04:00:48 PDT
Committed
280950@main
(999fdd1fc6c6): <
https://commits.webkit.org/280950@main
> Reviewed commits have been landed. Closing PR #30797 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-07-14 04:01:24 PDT
<
rdar://problem/131697366
>
Philippe Normand
Comment 4
2024-07-14 04:10:24 PDT
Re-opening, investigation pending.
Philippe Normand
Comment 5
2024-11-07 01:57:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36317
EWS
Comment 6
2024-11-08 00:45:30 PST
Committed
286322@main
(55837daba8e1): <
https://commits.webkit.org/286322@main
> Reviewed commits have been landed. Closing PR #36317 and removing active labels.
Philippe Normand
Comment 7
2024-11-08 00:56:56 PST
The flakiness is still present.
Philippe Normand
Comment 8
2025-06-19 04:07:54 PDT
Consistent timeout since
281394@main
:(
Philippe Normand
Comment 9
2025-06-19 07:35:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46969
EWS
Comment 10
2025-06-20 00:48:58 PDT
Committed
296432@main
(6425d5599a09): <
https://commits.webkit.org/296432@main
> Reviewed commits have been landed. Closing PR #46969 and removing active labels.
Philippe Normand
Comment 11
2025-06-22 12:06:03 PDT
Back to pass Pass Timeout flakiness.
Philippe Normand
Comment 12
2025-06-22 12:08:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47035
EWS
Comment 13
2025-06-22 12:10:51 PDT
Committed
296490@main
(85fb6db66d44): <
https://commits.webkit.org/296490@main
> Reviewed commits have been landed. Closing PR #47035 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug