[GStreamer][WebRTC] webrtc/video-av1.html is flaky https://bugs.webkit.org/show_bug.cgi?id=276587 <rdar://problem/131697366>

Reviewed by Xabier Rodriguez-Calvar.

The test was consistently timing out since 281394@main, due to two issues:

- After disabling the local track, the buffers on the remote track no longer had video metas,
because the allocation query on the incoming track was no longer active.
- The frames-decoded stats were no set in case there was no dropped frame on the video sink.

* LayoutTests/platform/gtk/TestExpectations:
* LayoutTests/platform/wpe/TestExpectations:
* Source/WebCore/platform/mediastream/gstreamer/GStreamerIncomingTrackProcessor.cpp:
(WebCore::GStreamerIncomingTrackProcessor::configure):
(WebCore::GStreamerIncomingTrackProcessor::stats):

Canonical link: https://commits.webkit.org/286322@main