Source/WebCore/platform/mediastream/gstreamer/GStreamerIncomingTrackProcessor.cpp
@@ -107,7 +107,7 @@ void GStreamerIncomingTrackProcessor::configure(ThreadSafeWeakPtr<GStreamerMedia
             return GST_PAD_PROBE_OK;
 
         gst_query_add_allocation_meta(query, GST_VIDEO_META_API_TYPE, nullptr);
-        return GST_PAD_PROBE_REMOVE;
+        return GST_PAD_PROBE_HANDLED;
     }), nullptr, nullptr);
 }
 
@@ -329,17 +329,15 @@ const GstStructure* GStreamerIncomingTrackProcessor::stats()
     if (!m_isDecoding)
         return nullptr;
 
-    m_stats.reset(gst_structure_new_empty("incoming-video-stats"));
     GUniqueOutPtr<GstStructure> stats;
     g_object_get(m_sink.get(), "stats", &stats.outPtr(), nullptr);
 
-    auto droppedVideoFrames = gstStructureGet<uint64_t>(stats.get(), "dropped"_s);
-    if (!droppedVideoFrames)
-        return m_stats.get();
+    auto droppedVideoFrames = gstStructureGet<uint64_t>(stats.get(), "dropped"_s).value_or(0);
+    m_stats.reset(gst_structure_new("incoming-video-stats", "frames-decoded", G_TYPE_UINT64, m_decodedVideoFrames, "frames-dropped", G_TYPE_UINT64, droppedVideoFrames, nullptr));
 
-    gst_structure_set(m_stats.get(), "frames-decoded", G_TYPE_UINT64, m_decodedVideoFrames, "frames-dropped", G_TYPE_UINT64, *droppedVideoFrames, nullptr);
     if (!m_videoSize.isZero())
         gst_structure_set(m_stats.get(), "frame-width", G_TYPE_UINT, static_cast<unsigned>(m_videoSize.width()), "frame-height", G_TYPE_UINT, static_cast<unsigned>(m_videoSize.height()), nullptr);
+
     return m_stats.get();
 }
 
